[package]
name = "slackbot-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde_json = "1.0"
serde= {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.11", features = ["json"]}
nats = "0.22.0"
clap = { version = "3.2.16", features = ["derive"] }
